<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clParentLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivBgTopMain"
        android:layout_width="wrap_content"
        android:layout_height="500dp"
        android:layout_marginBottom="46dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/top_bg_gis1"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/ivLogin"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/gis_white"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tvTitleLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-30dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/app_name"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogin" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="300dp"
        android:background="@drawable/rounded_top_corners"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleLogin">

        <ScrollView
            android:id="@+id/svParentLogin"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="35dp">

                <TextView
                    android:id="@+id/tvWelcomeLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/welcome_back"
                    android:textColor="@color/colorPrimary"
                    android:textSize="25sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvInfoLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-10dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/sign_continue"
                    android:textColor="@color/colorAccent"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvWelcomeLogin" />

                <include
                    android:id="@+id/incEtUser"
                    layout="@layout/edit_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvInfoLogin" />

                <include
                    android:id="@+id/incEtPass"
                    layout="@layout/edit_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/incEtUser" />

                <CheckBox
                    android:id="@+id/mcbRemember"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:buttonTint="@color/colorPrimary"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="center"
                    android:text="@string/remember_me"
                    android:textColor="@color/grey1"
                    android:textSize="15sp"
                    android:paddingTop="2dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/incEtPass" />

                <TextView
                    android:id="@+id/tvForgotLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/forgot_password"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/incEtPass" />

                <LinearLayout
                    android:id="@+id/llButtonLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvForgotLogin">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/mbLogin"
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_weight="1.6"
                        android:text="@string/login"
                        android:textSize="15sp"
                        android:fontFamily="@font/poppins_semibold"
                        app:backgroundTint="@color/colorPrimary"
                        app:elevation="10dp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/mbFinger"
                        android:visibility="gone"
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_weight="0.4"
                        android:layout_marginStart="7dp"
                        android:layout_marginEnd="3dp"
                        android:backgroundTint="@color/colorAccent"
                        app:icon="@drawable/baseline_fingerprint_24"
                        app:iconSize="40dp"
                        app:iconGravity="textStart"
                        app:iconPadding="0dp"
                        app:elevation="10dp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llAccountLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/llButtonLogin">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_semibold"
                        android:text="@string/dont_have_account"
                        android:textColor="@color/grey_default"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/tvCreateAccount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginBottom="300dp"
                        android:fontFamily="@font/poppins_semibold"
                        android:text="@string/create_new_account"
                        android:textColor="@color/colorPrimary"
                        android:textSize="13sp" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <TextView
            android:id="@+id/tvVersiLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:fontFamily="@font/poppins_italic"
            android:text="@string/app_version"
            android:textColor="@color/colorAccent"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        android:id="@+id/loadingLogin"
        layout="@layout/loading_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>